KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/Employee_Details__c.object-meta.xml
<CustomObject>
    <label>Employee Details</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>