KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Bank_account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_account_Number__c</fullName>
    <label>Bank account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>