KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_name__c</fullName>
    <label>Bank name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>