KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/date_of_joining__c.field-meta.xml
<CustomField>
    <fullName>date_of_joining__c</fullName>
    <label>date of joining</label>
    <type>Date</type>
</CustomField>