KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUSINESS MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>ENGINEERING</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>OPERATIONS</fullName>
            </value>
            <value>
                <fullName>PRODUCT MANAGEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>