KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/DESIGNATION__c.field-meta.xml
<CustomField>
    <fullName>DESIGNATION__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Marketing</fullName>
            </value>
            <value>
                <fullName>Product Planning</fullName>
            </value>
            <value>
                <fullName>Corporate Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing communications</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Program Management</fullName>
            </value>
            <value>
                <fullName>Release Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Human Resource</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Legal Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>