KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Designation_Level__c.field-meta.xml
<CustomField>
    <fullName>Designation_Level__c</fullName>
    <label>Designation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>