KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Employe_status__c.field-meta.xml
<CustomField>
    <fullName>Employe_status__c</fullName>
    <label>Employe status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE,</fullName>
            </value>
            <value>
                <fullName>LONG LEAVE</fullName>
            </value>
            <value>
                <fullName>MATERNITY LEAVE</fullName>
            </value>
            <value>
                <fullName>PROBATION</fullName>
            </value>
            <value>
                <fullName>RELIEVED</fullName>
            </value>
            <value>
                <fullName>RESIGNED</fullName>
            </value>
            <value>
                <fullName>SABBATICAL</fullName>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>