KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Employee_Active_status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Active_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Active status</label>
    <type>Checkbox</type>
</CustomField>