KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Employee_name__c.field-meta.xml
<CustomField>
    <fullName>Employee_name__c</fullName>
    <formula>text(Salution__c) + Last_name__c +&apos;  &apos;+ Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee name</label>
    <type>Text</type>
</CustomField>