KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Monthly_salary__c.field-meta.xml
<CustomField>
    <fullName>Monthly_salary__c</fullName>
    <label>Monthly salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>