KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/Passport_number__c.field-meta.xml
<CustomField>
    <fullName>Passport_number__c</fullName>
    <label>Passport number</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>