KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/PF_UAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_UAN_Number__c</fullName>
    <label>PF UAN Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>