KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <formula>IF(Employee_Active_status__c ==true,  
IMAGE(&apos;https://ksheerabdhi-dev-ed--c.visualforce.com/resource/1649318144000/greendot?&apos;, &apos;green&apos;, 30, 30) , IMAGE(&apos;https://ksheerabdhi-dev-ed--c.visualforce.com/resource/1649318869000/Reddot?&apos;, &apos;Red&apos;, 30, 40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>status</label>
    <type>Text</type>
</CustomField>