KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/AADHAR_number.validationRule-meta.xml
<ValidationRule>
    <fullName>AADHAR_number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(len(Aadhar_Number__c )&lt;12,NOT(REGEX(Aadhar_Number__c ,&quot;^[0-9]&quot;)))</errorConditionFormula>
    <errorDisplayField>Aadhar_Number__c</errorDisplayField>
    <errorMessage>AADHAR number should be 12 digit</errorMessage>
</ValidationRule>