KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/Bank_account_number_input.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_account_number_input</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISNUMBER( Bank_account_Number__c ) )</errorConditionFormula>
    <errorDisplayField>Bank_account_Number__c</errorDisplayField>
    <errorMessage>Bank account number will contain only numbers</errorMessage>
</ValidationRule>