KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/Bank_account_number_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_account_number_length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Bank_account_Number__c  ) &lt;9</errorConditionFormula>
    <errorDisplayField>Bank_account_Number__c</errorDisplayField>
    <errorMessage>account number contains 9-12 digit numbers</errorMessage>
</ValidationRule>