KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Email</fullName>
    <active>true</active>
    <errorConditionFormula>not(regex( Email_ID__c ,&quot;^[a-z0-9_:-:.]+[@][a-zA-z]+[:.][a-z]{2,3}&quot;))</errorConditionFormula>
    <errorDisplayField>Email_ID__c</errorDisplayField>
    <errorMessage>Kindly enter Valid Email or enter id in lower case</errorMessage>
</ValidationRule>