KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/first_name.validationRule-meta.xml
<ValidationRule>
    <fullName>first_name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(   Name ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter only alphabets</errorMessage>
</ValidationRule>