KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/IFSC_combination.validationRule-meta.xml
<ValidationRule>
    <fullName>IFSC_combination</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(IFSC_Code__c ,&quot;^[A-Z]{4}+[0]+[0-9]{6}&quot;))</errorConditionFormula>
    <errorDisplayField>IFSC_Code__c</errorDisplayField>
    <errorMessage>Enter Valid IFSC code or Enter values in upper case</errorMessage>
</ValidationRule>