KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/last_name.validationRule-meta.xml
<ValidationRule>
    <fullName>last_name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  Last_name__c  ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Last_name__c</errorDisplayField>
    <errorMessage>Please enter only alphabets</errorMessage>
</ValidationRule>