KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/middle_name.validationRule-meta.xml
<ValidationRule>
    <fullName>middle_name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(   Middle_Name__c ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Middle_Name__c</errorDisplayField>
    <errorMessage>Please enter only alphabets</errorMessage>
</ValidationRule>