KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/PAN_combination.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_combination</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  PAN_Number__c  ,&quot;^[A-Za-z]{5}+[0-9]{4}+[A-Z]{1}&quot;))</errorConditionFormula>
    <errorDisplayField>PAN_Number__c</errorDisplayField>
    <errorMessage>Enter Valid PAN NUMBER or Enter alphabets in uppercase</errorMessage>
</ValidationRule>