KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/Phone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone_number__c  ,&quot;^[0-9]&quot;))&amp;&amp;  len(Phone_number__c) &lt;&gt;10</errorConditionFormula>
    <errorDisplayField>Phone_number__c</errorDisplayField>
    <errorMessage>Phone number should 10 digit number</errorMessage>
</ValidationRule>