KsheerabdhiOrgSetup/force-app/main/default/objects/Employee_Details__c/validationRules/Phone_number_input.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_input</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT( ISNUMBER( Phone_number__c ) ),NOT(REGEX( Phone_number__c, &quot;^[9,8,7,6]{1}+[0-9]{9}&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone_number__c</errorDisplayField>
    <errorMessage>Enter valid number and number should start with 9 or 8 or 7 or 6</errorMessage>
</ValidationRule>